--- a/.project
+++ b/.project
@@ -34,4 +34,10 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.wst.jsdt.core.jsNature</nature>
 	</natures>
+	<variableList>
+		<variable>
+			<name>JAVA_HOME</name>
+			<value>file:/C:/Program%20Files/Java/jdk-13.0.2</value>
+		</variable>
+	</variableList>
 </projectDescription>
